Removed Museum System from main and test packages